prover-ray/zkcdriver/testdata/synced/invalid/static_05.zkc
//error:3:3-10:unknown symbol
static mask(address:u16) -> (word:u8) {
  UNKNOWN
}

fn main() {
  var r:u8 = mask[0]
  return
}
